force-app/main/default/objects/SalesProductSummary__c/SalesProductSummary__c.object-meta.xml
<CustomObject>
    <label>매출합계(상품별)</label>
    <nameField>
        <label>SalesProductSummary 이름</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>