force-app/main/default/objects/SalesProductSummary__c/fields/BRC_NM__c.field-meta.xml
<CustomField>
    <fullName>BRC_NM__c</fullName>
    <label>BRC_NM</label>
    <length>50</length>
    <type>Text</type>
</CustomField>