force-app/main/default/objects/SalesProductSummary__c/fields/CustomerPathCode__c.field-meta.xml
<CustomField>
    <fullName>CustomerPathCode__c</fullName>
    <description>고객 경로(사업부)</description>
    <externalId>true</externalId>
    <label>CustomerPathCode</label>
    <length>4</length>
    <type>Text</type>
</CustomField>