force-app/main/default/objects/SalesProductSummary__c/fields/CustomerPathNm__c.field-meta.xml
<CustomField>
    <fullName>CustomerPathNm__c</fullName>
    <description>고객 경로(사업부)명</description>
    <label>CustomerPathNm</label>
    <length>100</length>
    <type>Text</type>
</CustomField>