force-app/main/default/objects/SalesProductSummary__c/fields/DIV_NM__c.field-meta.xml
<CustomField>
    <fullName>DIV_NM__c</fullName>
    <label>DIV_NM</label>
    <length>50</length>
    <type>Text</type>
</CustomField>