force-app/main/default/objects/SalesProductSummary__c/fields/ExtId__c.field-meta.xml
<CustomField>
    <fullName>ExtId__c</fullName>
    <description>고객경로코드_상품대분류코드_상품중분류코드_상품소분류코드</description>
    <externalId>true</externalId>
    <label>ExtId</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>