force-app/main/default/objects/SalesProductSummary__c/fields/fm_MyDIV__c.field-meta.xml
<CustomField>
    <fullName>fm_MyDIV__c</fullName>
    <formula>IF( DIV_ID__c  = Text( $User.SU__c ) , &quot;Y&quot; , &quot;N&quot; )</formula>
    <label>fm_MyDIV</label>
    <type>Text</type>
</CustomField>