force-app/main/default/objects/SalesProductSummary__c/fields/fm_MySLBZ_ORG__c.field-meta.xml
<CustomField>
    <fullName>fm_MySLBZ_ORG__c</fullName>
    <formula>IF(OR(SLBZ_ORG_ID__c =  Text($User.HeadOffice__c),ISBLANK(Text($User.HeadOffice__c))) , &quot;Y&quot; , &quot;N&quot; )</formula>
    <label>fm_MySLBZ_ORG</label>
    <type>Text</type>
</CustomField>