force-app/main/default/objects/SalesProductSummary__c/fields/LAR_GD_CLS_ID__c.field-meta.xml
<CustomField>
    <fullName>LAR_GD_CLS_ID__c</fullName>
    <description>상품 대분류코드</description>
    <externalId>true</externalId>
    <label>LAR_GD_CLS_ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>