force-app/main/default/objects/SalesProductSummary__c/fields/LAR_GD_CLS_NM__c.field-meta.xml
<CustomField>
    <fullName>LAR_GD_CLS_NM__c</fullName>
    <description>상품 대분류명</description>
    <label>LAR_GD_CLS_NM</label>
    <length>50</length>
    <type>Text</type>
</CustomField>