force-app/main/default/objects/SalesProductSummary__c/fields/MID_GD_CLS_ID__c.field-meta.xml
<CustomField>
    <fullName>MID_GD_CLS_ID__c</fullName>
    <description>상품 중분류코드</description>
    <externalId>true</externalId>
    <label>MID_GD_CLS_ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>