force-app/main/default/objects/SalesProductSummary__c/fields/MID_GD_CLS_NM__c.field-meta.xml
<CustomField>
    <fullName>MID_GD_CLS_NM__c</fullName>
    <description>상품 중분류명</description>
    <label>MID_GD_CLS_NM</label>
    <length>50</length>
    <type>Text</type>
</CustomField>