force-app/main/default/objects/SalesProductSummary__c/fields/ProductCode__c.field-meta.xml
<CustomField>
    <fullName>ProductCode__c</fullName>
    <externalId>true</externalId>
    <label>ProductCode</label>
    <length>10</length>
    <type>Text</type>
</CustomField>