force-app/main/default/objects/SalesProductSummary__c/fields/SalesDate__c.field-meta.xml
<CustomField>
    <fullName>SalesDate__c</fullName>
    <label>SalesDate</label>
    <type>Date</type>
</CustomField>