force-app/main/default/objects/SalesProductSummary__c/fields/SLBZ_ORG_ID__c.field-meta.xml
<CustomField>
    <fullName>SLBZ_ORG_ID__c</fullName>
    <externalId>true</externalId>
    <label>SLBZ_ORG_ID</label>
    <length>4</length>
    <type>Text</type>
</CustomField>