force-app/main/default/objects/SalesProductSummary__c/fields/SLBZ_ORG_NM__c.field-meta.xml
<CustomField>
    <fullName>SLBZ_ORG_NM__c</fullName>
    <label>SLBZ_ORG_NM</label>
    <length>50</length>
    <type>Text</type>
</CustomField>