force-app/main/default/objects/SalesProductSummary__c/fields/SML_GD_CLS_ID__c.field-meta.xml
<CustomField>
    <fullName>SML_GD_CLS_ID__c</fullName>
    <description>상품 소분류 코드</description>
    <externalId>true</externalId>
    <label>SML_GD_CLS_ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>