force-app/main/default/objects/SalesProductSummary__c/fields/SML_GD_CLS_NM__c.field-meta.xml
<CustomField>
    <fullName>SML_GD_CLS_NM__c</fullName>
    <description>상품 소분류 명</description>
    <label>SML_GD_CLS_NM</label>
    <length>50</length>
    <type>Text</type>
</CustomField>