force-app/main/default/objects/SalesProductSummary__c/fields/TotalNetAmount__c.field-meta.xml
<CustomField>
    <fullName>TotalNetAmount__c</fullName>
    <label>TotalNetAmount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>