force-app/main/default/objects/SalesProductSummary__c/fields/TotalSalesAmount__c.field-meta.xml
<CustomField>
    <fullName>TotalSalesAmount__c</fullName>
    <description>총 매출액</description>
    <label>TotalSalesAmount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>